  createStatisticalAdjacencyList
+ add functions statistical, getLinks, topKnet, threshold with improved
  functionality for thresholding the statistical adjacency matrices (based on 
  hard thresholds, or top1, top2 or mean consensus matrix calculation according
  to Hase et al.) to replace removed functions
+ rename createStructuralAdjacency to structural
+ change vignette to markdown

Changes in version 1.3.1 (2019-09-06) 
+ change License to GPL (>= 3)
+ add codecov
+ add Travis-CI for continuous integration
+ add CITATION file 

Changes in version 1.1.2 (2019-04-16)
+ check that MetNet passes all builds without any errors or warnings

Changes in version 1.1.1 (2019-04-03)
+ correct typo in vignette

Changes in version 0.99.24 (2018-10-22)
+ adjust NEWS file to new format according to ?news: 
  o entries are grouped according to version, with version header 
    'Changes in version' at the beginning of a line, followed by a version 
    number, optionally followed by an ISO 8601 format date, possibly 
    parenthesized
  o entries may be grouped according to category, with a category header 
    (different from a version header) starting at the beginning of a line
  o entries are written as itemize-type lists, using one of o, *, - or + as 
    item tag. Entries must be indented, and ideally use a common indentation 
    for the item texts

Changes in version 0.99.23 (2018-10-16)
+ improve createStructuralAdjacency function 

Changes in version 0.99.20 (2018-08-06)
+ replace psych::corr.test by WGCNA::corAndPvalue to improve speed 

Changes in version 0.99.19 (2018-07-26)
+ print message when model calculation in createStatisticalAdjacency is 
  finished 

Changes in version 0.99.18 (2018-07-19)
+ set rfPermute.formula to rfPermute.default in order to use num.cores 

Changes in version 0.99.17 (2018-07-19)
+ set num.cores to 1 in test_statistical for randomForest 

Changes in version 0.99.15 (2018-07-16)
+ do not import stabsel from stabs 
